--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
   
   <div>
-    <h2 id="author">640631102 PANNAWIT PANWONG</h2>
+    <h2 id="author">620612154 Nitipong Saengla</h2>
     <h2 id="calculation"></h2>
-    <button class="button" id="toggle">Show Calculation</button>
+    <button class="button" id="toggle" oninput="listInput(event)" >Show Calculation</button>
   </div>
   
   <hr/>
@@ -32,14 +32,14 @@
 
   <div>
     #Characters to search: 
-    <input type="number" id="length" name="length" value=5>
+    <input type="number" id="length" name="length" value=5 oninput="listInput(event)">
       
     Text color: 
     <input type="color" id="color" name="color" value="#FF0000">
     
     <br/>
-    <button id="search">Search</button>
-    <button id="reset">Reset</button>
+    <button id="search" onclick="search()" >Search</button>
+    <button id="reset" onclick="reset()" >Reset</button>
     </div>
 
 </body>
